@@ -79,4 +79,8 @@ TODO: maybe work around 3.996gb barrier in pread/pwrite as well, maybe readahead
         - add EIO_FCNTL, EIO_IOCTL.
         - try to use SYMBOLIC_LINK_FLAG_ALLOW_UNPRIVILEGED_CREATE when creating
           symlinks on windows.
+        - support a minimum of EIO_PATH_MIN (default: 8160) as PATH_MAX (including
+          trailing 0 byte) in readlink, realpath etc.
+        - generate ENAMETOOLONG if readlink overflow is detected.
+
 
